--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
     <title>Sprocket Developer Website</title>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respondcookie_init.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.mincookie_init.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.mincookie_init.js"></script>
     <![endif]-->
     <!-- build:css -->
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
@@ -33,7 +33,6 @@
 <script src="bower_components/handlebars/handlebars.runtime.js"></script>
 <script src="bower_components/ember/ember.js"></script>
 <script src="scripts/concat.hbs.js"></script>
-<script src="scripts/conf.js"></script>
 <script src="scripts/concat.js"></script>
 <!-- endbuild -->
 </body>
